--- a/pacientes/timeline/client/site/views/pages/main.hbs
+++ b/pacientes/timeline/client/site/views/pages/main.hbs
@@ -1,11 +1,11 @@
 <div id="mainpage" ng-controller="mainCtrl">
 
         
-<div style="height:600px">
-  <div style="float: left; width: 50%; height:600px">
+<div>
+  <div style="float: left; width: 50%;">
     {{>timeline}}
     </div>
-    <div style="float: right; width: 45%; height:600px">
+    <div style="float: right; width: 50%;">
      {{>maps}}
     </div>
 </div>
