--- a/pacientes/timeline/client/site/views/layout/layout.hbs
+++ b/pacientes/timeline/client/site/views/layout/layout.hbs
@@ -46,7 +46,7 @@
   <script src="./bower_components/angular-resource/angular-resource.min.js"></script>
   <script src="./bower_components/angular-scroll-glue/src/scrollglue.js"></script>
   <script src="./bower_components/ngmap/build/scripts/ng-map.min.js"></script>
-  <script src="http://maps.google.com/maps/api/js?key=AIzaSyAI_b4DOvZu2tVFVzeNaHuCkLH3b3U8jTI"></script>
+  <script src="https://maps.google.com/maps/api/js?key=AIzaSyAI_b4DOvZu2tVFVzeNaHuCkLH3b3U8jTI"></script>
   <script src="./js/site.js"></script>
 
   <script src="./js/components/api/broker.service.js"></script>
